scripts/nullaway/annotator/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8.txt
../annotator/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/pipes/AggregatePipe.java:24: error: [NullAway] dereferenced expression callback is @Nullable
		callback.onSuccess(agg.result());
		        ^
    (see http://t.uber.com/nullaway )
../annotator/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/sources/DirectoryList.java:41: error: [NullAway] dereferenced expression fileFilter is @Nullable
				if (fileFilter.accept(file)) {
				              ^
    (see http://t.uber.com/nullaway )
../annotator/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Example.java:62: error: [NullAway] enhanced-for expression run is @Nullable
		for (int i: run) {
		            ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urla39b63eb76_tef_pipeline_tgz-pJ8-org_twentygototen_pipeline_ExampleJ8/src/org/twentygototen/pipeline/Pipeline.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
3 errors
